build: login api + authen/author filter

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 ################################################################################
 
 /.vs
+/Project/.vs/Project/config/applicationhost.config
+/Project/.vs/Project/DesignTimeBuild/.dtbcache.v2
+/Project/.vs/Project/FileContentIndex/15eb8c04-da71-4369-b9da-c6b53e09d850.vsidx
+/Project/.vs/Project/FileContentIndex/3e119574-63a1-4a1b-a656-36602d4e4f93.vsidx
+/Project/.vs/Project/FileContentIndex/45742c6b-bfe6-470c-97f0-12664f2c93eb.vsidx
+/Project/.vs/Project/FileContentIndex/837b7c1e-e528-4b47-9f38-c8b4086788d3.vsidx
+/Project/.vs/Project/FileContentIndex/9458d2b5-e65a-4fab-b53f-bdc23524f469.vsidx
+/Project/.vs/Project/FileContentIndex/a03080e8-64cc-43e0-ac6c-cb31c25e52ae.vsidx
+/Project/.vs/Project/v17/.futdcache.v2
+/Project/.vs/Project/v17/.suo
+/Project/.vs/Project/v17/DocumentLayout.json
+/Project/.vs/Project/v17/fileList.bin
