build: user + role CRUD api

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,18 @@
 /Project/.vs/Project/v17/.suo
 /Project/.vs/Project/v17/DocumentLayout.json
 /Project/.vs/Project/v17/fileList.bin
+/Project/.vs/Project/FileContentIndex/33bee91f-433d-4c57-ae50-48d10b27da73.vsidx
+/Project/.vs/Project/FileContentIndex/7f75da3b-cc31-4b49-ac80-3ed021a5feb4.vsidx
+/Project/.vs/Project/FileContentIndex/8d833a17-89df-45a4-91f0-124e88108285.vsidx
+/Project/.vs/Project/FileContentIndex/a9d059df-7398-4580-878b-7bc343be22cc.vsidx
+/Project/.vs/Project/FileContentIndex/d0126d94-f02e-440a-b8a7-ddde97c566b9.vsidx
+/Project/.vs/ProjectEvaluation/project.metadata.v7.bin
+/Project/.vs/ProjectEvaluation/project.projects.v7.bin
+/Project/DataAccess.EShop/bin/Debug/net6.0/DataAccess.EShop.dll
+/Project/DataAccess.EShop/bin/Debug/net6.0/DataAccess.EShop.pdb
+/Project/.vs/Project/FileContentIndex/2a3b834e-7437-4748-8384-61c6654d74ef.vsidx
+/Project/.vs/Project/FileContentIndex/6f0ca5d9-be09-4bca-a195-416c95c4d1ab.vsidx
+/Project/.vs/Project/FileContentIndex/9ae035bb-31a3-4856-812c-66605202101e.vsidx
+/Project/.vs/Project/FileContentIndex/f0e6fe1d-2800-48bd-825e-62ebcc44df96.vsidx
+/Project/.vs/ProjectEvaluation/project.metadata.v7.bin
+/Project/.vs/ProjectEvaluation/project.projects.v7.bin
